--- a/index.html
+++ b/index.html
@@ -723,7 +723,7 @@
             <option value="2" selected>2 Orang</option>
             <option value="3">3 Orang</option>
             <option value="4">4 Orang</option>
-            <!-- <option value="5">5 Orang</option> -->
+            <option value="5">5 Orang</option>
             <option value="6">Lebih dari 4 Orang</option>
           </select>
         </div>
